<resources>
    <string name="app_name">CalculatorPrototype</string>

    <string name="action_settings">Settings</string>

    <string name="zero"     >0      </string>
    <string name="one"      >1      </string>
    <string name="two"      >2      </string>
    <string name="three"    >3      </string>
    <string name="four"     >4      </string>
    <string name="five"     >5      </string>
    <string name="six"      >6      </string>
    <string name="seven"    >7      </string>
    <string name="eight"    >8      </string>
    <string name="nine"     >9      </string>
    <string name="plus"     >+      </string>
    <string name="minus"    >-      </string>
    <string name="times"    >*      </string>
    <string name="div"      >/      </string>
    <string name="dot"      >.      </string>
    <string name="equal"    >=      </string>
    <string name="clr"      >Clr    </string>
    <string name="ans"      >Ans    </string>
    <string name="sine"     >sin()  </string>
    <string name="cosine"   >cos()  </string>
    <string name="tangent"  >tg()   </string>
</resources>