<?xml version="1.0" encoding="utf-8"?>

<com.colorlesscube.calculatorprototype.prototypePadLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/numericpad_advanced"
    android:columnCount="1"
    android:rowCount="4"
    style="@style/NumericPadAdvancedStyle">

    <Button
        android:id="@+id/button_sine"
        android:onClick="onClickListenerSine"
        android:text="@string/sine"
        style="@style/NumericPadAdvancedButtonStyle"/>

    <Button
        android:id="@+id/button_cosine"
        android:onClick="onClickListenerCosine"
        android:text="@string/cosine"
        style="@style/NumericPadAdvancedButtonStyle"/>

    <Button
        android:id="@+id/button_tangent"
        android:onClick="onClickListenerTangent"
        android:text="@string/tangent"
        style="@style/NumericPadAdvancedButtonStyle"/>

    <Button
        android:id="@+id/button_clr"
        android:onClick="onClickListenerClr"
        android:text="@string/clr"
        style="@style/NumericPadAdvancedButtonStyle"/>
</com.colorlesscube.calculatorprototype.prototypePadLayout>